MHDOC, Installation Guide Fixes for New Scripts
Signed-off-by: Lars Kiesow <lkiesow@uos.de>